--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "convex": "^1.13.0",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
     "react": "^18",
