--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.13.0",
     "convex-helpers": "^0.1.44",
+    "dayjs": "^1.11.11",
     "jose": "^5.6.2",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
