--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
@@ -26,12 +27,14 @@
     "clsx": "^2.1.1",
     "convex": "^1.13.0",
     "convex-helpers": "^0.1.44",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "jose": "^5.6.2",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
     "next-auth": "5.0.0-beta.19",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "tailwind-merge": "^2.3.0",
