--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
     "next-auth": "5.0.0-beta.19",
+    "openai": "^4.52.3",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
